tests/invalid/annotation_unsupported_type_name/main.py
def main() -> None:
    x: UnknownType = 1
